[package]
name = "boost"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[[test]]
name="generate"
path = "lib.rs"

[dependencies]
candid = "0.9.6"
ic-cdk = "0.11.0"
ic-cdk-timers = "0.4.0"
ic-cdk-macros = "0.8.0"
serde = "1.0"
ic-stable-structures = "0.6.0-beta.1"
ic-ledger-types = "0.8.0"
serde_json = "1.0.107"
ic_scalable_misc = "1.0.0"